Configuracion de PSR-4

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
             "email": "hnrdiaz@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "IntelGUA\\": "src\\"
+        }
+    },
     "require": {}
 }
