--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "intelguasoft/prueba-composer",
     "description": "Es una prueba de concepto de composer",
     "type": "project",
+    "version": "1.0.0-dev",
     "authors": [
         {
             "name": "Henry Diaz",
@@ -14,6 +15,7 @@
         }
     },
     "require": {
+        "php": ">=5.3.0",
         "phpunit/php-timer": "^2.0"
     }
 }
